// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchOpt 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x2)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 2,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x3)",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 3,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 4,
    "dest": 8,
    "ins": "sub x4, x4, x5",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 3,
    "n_we": 8,
    "pipe": "--ffFDEMW",
    "s1": 4,
    "s2": 5,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 11,
    "ins": "add x2, x2, x4",
    "n_de": 6,
    "n_ee": 9,
    "n_fe": 5,
    "n_me": 10,
    "n_pc": 6,
    "n_we": 11,
    "pipe": "-----FddDEMW",
    "s1": 2,
    "s2": 4,
    "src1": 0,
    "src2": 8,
  },
  Object {
    "d": 3,
    "dest": 12,
    "ins": "add x3, x3, x4",
    "n_de": 9,
    "n_ee": 10,
    "n_fe": 6,
    "n_me": 11,
    "n_pc": 7,
    "n_we": 12,
    "pipe": "------ffFDEMW",
    "s1": 3,
    "s2": 4,
    "src1": 0,
    "src2": 8,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x4, x6, loop",
    "n_de": 10,
    "n_ee": 11,
    "n_fe": 9,
    "n_me": 12,
    "n_pc": 11,
    "n_we": 13,
    "pipe": "---------FDEMW",
    "s1": 4,
    "s2": 6,
    "src1": 8,
    "src2": 0,
  },
  Object {
    "d": 1,
    "dest": 15,
    "ins": "lw x1, lab(x2)",
    "n_de": 12,
    "n_ee": 13,
    "n_fe": 10,
    "n_me": 14,
    "n_pc": 11,
    "n_we": 15,
    "pipe": "----------fFDEMW",
    "s1": 2,
    "s2": 0,
    "src1": 11,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x3)",
    "n_de": 13,
    "n_ee": 16,
    "n_fe": 12,
    "n_me": 17,
    "n_pc": 13,
    "n_we": 18,
    "pipe": "------------FddDEMW",
    "s1": 1,
    "s2": 3,
    "src1": 15,
    "src2": 12,
  },
  Object {
    "d": 4,
    "dest": 19,
    "ins": "sub x4, x4, x5",
    "n_de": 16,
    "n_ee": 17,
    "n_fe": 13,
    "n_me": 18,
    "n_pc": 14,
    "n_we": 19,
    "pipe": "-------------ffFDEMW",
    "s1": 4,
    "s2": 5,
    "src1": 8,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 22,
    "ins": "add x2, x2, x4",
    "n_de": 17,
    "n_ee": 20,
    "n_fe": 16,
    "n_me": 21,
    "n_pc": 17,
    "n_we": 22,
    "pipe": "----------------FddDEMW",
    "s1": 2,
    "s2": 4,
    "src1": 11,
    "src2": 19,
  },
  Object {
    "d": 3,
    "dest": 23,
    "ins": "add x3, x3, x4",
    "n_de": 20,
    "n_ee": 21,
    "n_fe": 17,
    "n_me": 22,
    "n_pc": 18,
    "n_we": 23,
    "pipe": "-----------------ffFDEMW",
    "s1": 3,
    "s2": 4,
    "src1": 12,
    "src2": 19,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x4, x6, loop",
    "n_de": 21,
    "n_ee": 22,
    "n_fe": 20,
    "n_me": 23,
    "n_pc": 22,
    "n_we": 24,
    "pipe": "--------------------FDEMW",
    "s1": 4,
    "s2": 6,
    "src1": 19,
    "src2": 0,
  },
]
`;

exports[`BranchOpt 2`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe                     
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  -------------------------
lw x1, lab(x2)    0     1     2     3     4     0     0     4     1     2   0   1  FDEMW                    
sw x1, lab(x3)    1     2     5     6     7     4     0     0     2     1   3   0  -FddDEMW                 
sub x4, x4, x5    2     5     6     7     8     0     0     8     3     4   5   4  --ffFDEMW                
add x2, x2, x4    5     6     9     10    11    0     8     11    6     2   4   2  -----FddDEMW             
add x3, x3, x4    6     9     10    11    12    0     8     12    7     3   4   3  ------ffFDEMW            
beq x4, x6, loop  9     10    11    12    13    8     0     0     11    4   6   0  ---------FDEMW           
lw x1, lab(x2)    10    12    13    14    15    11    0     15    11    2   0   1  ----------fFDEMW         
sw x1, lab(x3)    12    13    16    17    18    15    12    0     13    1   3   0  ------------FddDEMW      
sub x4, x4, x5    13    16    17    18    19    8     0     19    14    4   5   4  -------------ffFDEMW     
add x2, x2, x4    16    17    20    21    22    11    19    22    17    2   4   2  ----------------FddDEMW  
add x3, x3, x4    17    20    21    22    23    12    19    23    18    3   4   3  -----------------ffFDEMW 
beq x4, x6, loop  20    21    22    23    24    19    0     0     22    4   6   0  --------------------FDEMW
"
`;

exports[`BranchOpt 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 5,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 9,
    "ins": "add x3, x1, x2",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`BranchOpt 4`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe      
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ----------
add x1, x10, x12  0     1     2     3     4     0     0     4     1     10  12  1  FDEMW     
beq x1, x2, loop  1     2     5     6     7     4     0     0     5     1   2   0  -FddDEMW  
add x3, x1, x2    2     6     7     8     9     4     0     9     3     1   2   3  --fffFDEMW
"
`;

exports[`BranchOpt 5`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x5, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 5,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 5,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 9,
    "ins": "lw x2, lab(x3)",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 10,
    "ins": "add x3, x3, x3",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 6,
    "n_me": 9,
    "n_pc": 7,
    "n_we": 10,
    "pipe": "------FDEMW",
    "s1": 3,
    "s2": 3,
    "src1": 0,
    "src2": 0,
  },
]
`;

exports[`BranchOpt 6`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe       
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  -----------
lw x1, lab(x3)    0     1     2     3     4     0     0     4     1     3   0   1  FDEMW      
beq x1, x5, loop  1     2     5     6     7     4     0     0     5     1   5   0  -FddDEMW   
lw x2, lab(x3)    2     6     7     8     9     0     0     9     3     3   0   2  --fffFDEMW 
add x3, x3, x3    6     7     8     9     10    0     0     10    7     3   3   3  ------FDEMW
"
`;

exports[`Fw 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 5,
    "ins": "sub x2, x1, x12",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 2,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 12,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 6,
    "ins": "add x13, x1, x2",
    "n_de": 4,
    "n_ee": 5,
    "n_fe": 2,
    "n_me": 6,
    "n_pc": 3,
    "n_we": 7,
    "pipe": "--fFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 5,
  },
]
`;

exports[`Fw 2`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe    
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  --------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW   
sub x2, x1, x12  1     2     4     5     6     4     0     5     2     1   12  2   -FdDEMW 
add x13, x1, x2  2     4     5     6     7     4     5     6     3     1   2   13  --fFDEMW
"
`;

exports[`Fw 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x2, lab(x11)",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 2,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 2,
    "s2": 11,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 5,
    "ins": "add x13, x1, x2",
    "n_de": 3,
    "n_ee": 4,
    "n_fe": 2,
    "n_me": 5,
    "n_pc": 3,
    "n_we": 6,
    "pipe": "--FDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`Fw 4`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe   
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  -------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW  
sw x2, lab(x11)  1     2     3     4     5     0     0     0     2     2   11  0   -FDEMW 
add x13, x1, x2  2     3     4     5     6     4     0     5     3     1   2   13  --FDEMW
"
`;

exports[`Fw 5`] = `
Array [
  Object {
    "d": 1,
    "dest": 3,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 5,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 8,
    "ins": "add x3, x1, x2",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
]
`;

exports[`Fw 6`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe      
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ----------
add x1, x10, x12  0     1     2     3     4     0     0     3     1     10  12  1  FDEMW     
beq x1, x2, loop  1     2     3     4     5     3     0     0     5     1   2   0  -FDEMW    
add x3, x1, x2    2     6     7     8     9     3     0     8     3     1   2   3  --fffFDEMW
"
`;

exports[`Fw 7`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x11)",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 2,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 1,
    "s2": 11,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 5,
    "ins": "add x13, x1, x2",
    "n_de": 3,
    "n_ee": 4,
    "n_fe": 2,
    "n_me": 5,
    "n_pc": 3,
    "n_we": 6,
    "pipe": "--FDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`Fw 8`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe   
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  -------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW  
sw x1, lab(x11)  1     2     3     4     5     4     0     0     2     1   11  0   -FDEMW 
add x13, x1, x2  2     3     4     5     6     4     0     5     3     1   2   13  --FDEMW
"
`;

exports[`Fw 9`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x3, lab(x1)",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 2,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 3,
    "s2": 1,
    "src1": 0,
    "src2": 4,
  },
  Object {
    "d": 13,
    "dest": 6,
    "ins": "add x13, x1, x2",
    "n_de": 4,
    "n_ee": 5,
    "n_fe": 2,
    "n_me": 6,
    "n_pc": 3,
    "n_we": 7,
    "pipe": "--fFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`Fw 10`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe    
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  --------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW   
sw x3, lab(x1)   1     2     4     5     6     0     4     0     2     3   1   0   -FdDEMW 
add x13, x1, x2  2     4     5     6     7     4     0     6     3     1   2   13  --fFDEMW
"
`;

exports[`Fw BranchOpt 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x2)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 2,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x3)",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 2,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 1,
    "s2": 3,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 4,
    "dest": 5,
    "ins": "sub x4, x4, x5",
    "n_de": 3,
    "n_ee": 4,
    "n_fe": 2,
    "n_me": 5,
    "n_pc": 3,
    "n_we": 6,
    "pipe": "--FDEMW",
    "s1": 4,
    "s2": 5,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 6,
    "ins": "add x2, x2, x4",
    "n_de": 4,
    "n_ee": 5,
    "n_fe": 3,
    "n_me": 6,
    "n_pc": 4,
    "n_we": 7,
    "pipe": "---FDEMW",
    "s1": 2,
    "s2": 4,
    "src1": 0,
    "src2": 5,
  },
  Object {
    "d": 3,
    "dest": 7,
    "ins": "add x3, x3, x4",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 4,
    "n_me": 7,
    "n_pc": 5,
    "n_we": 8,
    "pipe": "----FDEMW",
    "s1": 3,
    "s2": 4,
    "src1": 0,
    "src2": 5,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x4, x6, loop",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 5,
    "n_me": 8,
    "n_pc": 7,
    "n_we": 9,
    "pipe": "-----FDEMW",
    "s1": 4,
    "s2": 6,
    "src1": 5,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 2`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe      
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ----------
lw x1, lab(x2)    0     1     2     3     4     0     0     4     1     2   0   1  FDEMW     
sw x1, lab(x3)    1     2     3     4     5     4     0     0     2     1   3   0  -FDEMW    
sub x4, x4, x5    2     3     4     5     6     0     0     5     3     4   5   4  --FDEMW   
add x2, x2, x4    3     4     5     6     7     0     5     6     4     2   4   2  ---FDEMW  
add x3, x3, x4    4     5     6     7     8     0     5     7     5     3   4   3  ----FDEMW 
beq x4, x6, loop  5     6     7     8     9     5     0     0     7     4   6   0  -----FDEMW
"
`;

exports[`Fw BranchOpt 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 3,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 4,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 7,
    "ins": "add x3, x1, x2",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 3,
    "n_we": 8,
    "pipe": "--ffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 3,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 4`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe     
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ---------
add x1, x10, x12  0     1     2     3     4     0     0     3     1     10  12  1  FDEMW    
beq x1, x2, loop  1     2     4     5     6     3     0     0     4     1   2   0  -FdDEMW  
add x3, x1, x2    2     5     6     7     8     3     0     7     3     1   2   3  --ffFDEMW
"
`;

exports[`Fw BranchOpt 5`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 5,
    "ins": "sub x2, x1, x10",
    "n_de": 2,
    "n_ee": 4,
    "n_fe": 1,
    "n_me": 5,
    "n_pc": 2,
    "n_we": 6,
    "pipe": "-FdDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 4,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 6,
    "n_we": 8,
    "pipe": "--fFdDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 5,
    "src2": 0,
  },
  Object {
    "d": 1,
    "dest": 10,
    "ins": "lw x1, lab(x3)",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 4,
    "n_me": 9,
    "n_pc": 5,
    "n_we": 10,
    "pipe": "----ffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 11,
    "ins": "sub x2, x1, x10",
    "n_de": 8,
    "n_ee": 10,
    "n_fe": 7,
    "n_me": 11,
    "n_pc": 8,
    "n_we": 12,
    "pipe": "-------FdDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 10,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 10,
    "n_ee": 12,
    "n_fe": 8,
    "n_me": 13,
    "n_pc": 12,
    "n_we": 14,
    "pipe": "--------fFdDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 11,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 6`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe           
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ---------------
lw x1, lab(x3)    0     1     2     3     4     0     0     4     1     3   0   1  FDEMW          
sub x2, x1, x10   1     2     4     5     6     4     0     5     2     1   10  2  -FdDEMW        
beq x2, x5, loop  2     4     6     7     8     5     0     0     6     2   5   0  --fFdDEMW      
lw x1, lab(x3)    4     7     8     9     10    0     0     10    5     3   0   1  ----ffFDEMW    
sub x2, x1, x10   7     8     10    11    12    10    0     11    8     1   10  2  -------FdDEMW  
beq x2, x5, loop  8     10    12    13    14    11    0     0     12    2   5   0  --------fFdDEMW
"
`;

exports[`Fw BranchOpt 7`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x5, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 5,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 5,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 9,
    "ins": "lw x2, lab(x3)",
    "n_de": 6,
    "n_ee": 7,
    "n_fe": 2,
    "n_me": 8,
    "n_pc": 3,
    "n_we": 9,
    "pipe": "--fffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 9,
    "ins": "add x3, x3, x3",
    "n_de": 7,
    "n_ee": 8,
    "n_fe": 6,
    "n_me": 9,
    "n_pc": 7,
    "n_we": 10,
    "pipe": "------FDEMW",
    "s1": 3,
    "s2": 3,
    "src1": 0,
    "src2": 0,
  },
]
`;

exports[`Fw BranchOpt 8`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe       
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  -----------
lw x1, lab(x3)    0     1     2     3     4     0     0     4     1     3   0   1  FDEMW      
beq x1, x5, loop  1     2     5     6     7     4     0     0     5     1   5   0  -FddDEMW   
lw x2, lab(x3)    2     6     7     8     9     0     0     9     3     3   0   2  --fffFDEMW 
add x3, x3, x3    6     7     8     9     10    0     0     9     7     3   3   3  ------FDEMW
"
`;

exports[`No fw 1`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 7,
    "ins": "sub x2, x1, x12",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 12,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 10,
    "ins": "add x13, x1, x2",
    "n_de": 5,
    "n_ee": 8,
    "n_fe": 2,
    "n_me": 9,
    "n_pc": 3,
    "n_we": 10,
    "pipe": "--ffFddDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 7,
  },
]
`;

exports[`No fw 2`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe       
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  -----------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW      
sub x2, x1, x12  1     2     5     6     7     4     0     7     2     1   12  2   -FddDEMW   
add x13, x1, x2  2     5     8     9     10    4     7     10    3     1   2   13  --ffFddDEMW
"
`;

exports[`No fw 3`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 5,
    "ins": "sub x3, x4, x12",
    "n_de": 2,
    "n_ee": 3,
    "n_fe": 1,
    "n_me": 4,
    "n_pc": 2,
    "n_we": 5,
    "pipe": "-FDEMW",
    "s1": 4,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 7,
    "ins": "add x13, x1, x2",
    "n_de": 3,
    "n_ee": 5,
    "n_fe": 2,
    "n_me": 6,
    "n_pc": 3,
    "n_we": 7,
    "pipe": "--FdDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`No fw 4`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe    
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  --------
add x1, x10, x12  0     1     2     3     4     0     0     4     1     10  12  1   FDEMW   
sub x3, x4, x12   1     2     3     4     5     0     0     5     2     4   12  3   -FDEMW  
add x13, x1, x2   2     3     5     6     7     4     0     7     3     1   2   13  --FdDEMW
"
`;

exports[`No fw 5`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "add x1, x10, x12",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 12,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x1, x2, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 7,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 3,
    "dest": 11,
    "ins": "add x3, x1, x2",
    "n_de": 8,
    "n_ee": 9,
    "n_fe": 2,
    "n_me": 10,
    "n_pc": 3,
    "n_we": 11,
    "pipe": "--fffffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`No fw 6`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe        
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ------------
add x1, x10, x12  0     1     2     3     4     0     0     4     1     10  12  1  FDEMW       
beq x1, x2, loop  1     2     5     6     7     4     0     0     7     1   2   0  -FddDEMW    
add x3, x1, x2    2     8     9     10    11    4     0     11    3     1   2   3  --fffffFDEMW
"
`;

exports[`No fw 7`] = `
Array [
  Object {
    "d": 2,
    "dest": 4,
    "ins": "add x2, x9, x10",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 9,
    "s2": 10,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x1, loop",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 7,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 2,
    "s2": 1,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 11,
    "ins": "add x2, x9, x10",
    "n_de": 8,
    "n_ee": 9,
    "n_fe": 2,
    "n_me": 10,
    "n_pc": 3,
    "n_we": 11,
    "pipe": "--fffffFDEMW",
    "s1": 9,
    "s2": 10,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x1, loop",
    "n_de": 9,
    "n_ee": 12,
    "n_fe": 8,
    "n_me": 13,
    "n_pc": 14,
    "n_we": 14,
    "pipe": "--------FddDEMW",
    "s1": 2,
    "s2": 1,
    "src1": 11,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 18,
    "ins": "add x2, x9, x10",
    "n_de": 15,
    "n_ee": 16,
    "n_fe": 9,
    "n_me": 17,
    "n_pc": 10,
    "n_we": 18,
    "pipe": "---------fffffFDEMW",
    "s1": 9,
    "s2": 10,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x1, loop",
    "n_de": 16,
    "n_ee": 19,
    "n_fe": 15,
    "n_me": 20,
    "n_pc": 21,
    "n_we": 21,
    "pipe": "---------------FddDEMW",
    "s1": 2,
    "s2": 1,
    "src1": 18,
    "src2": 0,
  },
]
`;

exports[`No fw 8`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe                  
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ----------------------
add x2, x9, x10   0     1     2     3     4     0     0     4     1     9   10  2  FDEMW                 
beq x2, x1, loop  1     2     5     6     7     4     0     0     7     2   1   0  -FddDEMW              
add x2, x9, x10   2     8     9     10    11    0     0     11    3     9   10  2  --fffffFDEMW          
beq x2, x1, loop  8     9     12    13    14    11    0     0     14    2   1   0  --------FddDEMW       
add x2, x9, x10   9     15    16    17    18    0     0     18    10    9   10  2  ---------fffffFDEMW   
beq x2, x1, loop  15    16    19    20    21    18    0     0     21    2   1   0  ---------------FddDEMW
"
`;

exports[`No fw 9`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x3)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 7,
    "ins": "sub x2, x1, x10",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 5,
    "n_ee": 8,
    "n_fe": 2,
    "n_me": 9,
    "n_pc": 10,
    "n_we": 10,
    "pipe": "--ffFddDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 7,
    "src2": 0,
  },
  Object {
    "d": 1,
    "dest": 14,
    "ins": "lw x1, lab(x3)",
    "n_de": 11,
    "n_ee": 12,
    "n_fe": 5,
    "n_me": 13,
    "n_pc": 6,
    "n_we": 14,
    "pipe": "-----fffffFDEMW",
    "s1": 3,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 2,
    "dest": 17,
    "ins": "sub x2, x1, x10",
    "n_de": 12,
    "n_ee": 15,
    "n_fe": 11,
    "n_me": 16,
    "n_pc": 12,
    "n_we": 17,
    "pipe": "-----------FddDEMW",
    "s1": 1,
    "s2": 10,
    "src1": 14,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "beq x2, x5, loop",
    "n_de": 15,
    "n_ee": 18,
    "n_fe": 12,
    "n_me": 19,
    "n_pc": 20,
    "n_we": 20,
    "pipe": "------------ffFddDEMW",
    "s1": 2,
    "s2": 5,
    "src1": 17,
    "src2": 0,
  },
]
`;

exports[`No fw 10`] = `
"ins               n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d  pipe                 
----------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  -  ---------------------
lw x1, lab(x3)    0     1     2     3     4     0     0     4     1     3   0   1  FDEMW                
sub x2, x1, x10   1     2     5     6     7     4     0     7     2     1   10  2  -FddDEMW             
beq x2, x5, loop  2     5     8     9     10    7     0     0     10    2   5   0  --ffFddDEMW          
lw x1, lab(x3)    5     11    12    13    14    0     0     14    6     3   0   1  -----fffffFDEMW      
sub x2, x1, x10   11    12    15    16    17    14    0     17    12    1   10  2  -----------FddDEMW   
beq x2, x5, loop  12    15    18    19    20    17    0     0     20    2   5   0  ------------ffFddDEMW
"
`;

exports[`No fw 11`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x1, lab(x11)",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 1,
    "s2": 11,
    "src1": 4,
    "src2": 0,
  },
  Object {
    "d": 13,
    "dest": 8,
    "ins": "add x13, x1, x2",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 3,
    "n_we": 8,
    "pipe": "--ffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`No fw 12`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe     
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  ---------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW    
sw x1, lab(x11)  1     2     5     6     7     4     0     0     2     1   11  0   -FddDEMW 
add x13, x1, x2  2     5     6     7     8     4     0     8     3     1   2   13  --ffFDEMW
"
`;

exports[`No fw 13`] = `
Array [
  Object {
    "d": 1,
    "dest": 4,
    "ins": "lw x1, lab(x10)",
    "n_de": 1,
    "n_ee": 2,
    "n_fe": 0,
    "n_me": 3,
    "n_pc": 1,
    "n_we": 4,
    "pipe": "FDEMW",
    "s1": 10,
    "s2": 0,
    "src1": 0,
    "src2": 0,
  },
  Object {
    "d": 0,
    "dest": 0,
    "ins": "sw x3, lab(x1)",
    "n_de": 2,
    "n_ee": 5,
    "n_fe": 1,
    "n_me": 6,
    "n_pc": 2,
    "n_we": 7,
    "pipe": "-FddDEMW",
    "s1": 3,
    "s2": 1,
    "src1": 0,
    "src2": 4,
  },
  Object {
    "d": 13,
    "dest": 8,
    "ins": "add x13, x1, x2",
    "n_de": 5,
    "n_ee": 6,
    "n_fe": 2,
    "n_me": 7,
    "n_pc": 3,
    "n_we": 8,
    "pipe": "--ffFDEMW",
    "s1": 1,
    "s2": 2,
    "src1": 4,
    "src2": 0,
  },
]
`;

exports[`No fw 14`] = `
"ins              n_fe  n_de  n_ee  n_me  n_we  src1  src2  dest  n_pc  s1  s2  d   pipe     
---------------  ----  ----  ----  ----  ----  ----  ----  ----  ----  --  --  --  ---------
lw x1, lab(x10)  0     1     2     3     4     0     0     4     1     10  0   1   FDEMW    
sw x3, lab(x1)   1     2     5     6     7     0     4     0     2     3   1   0   -FddDEMW 
add x13, x1, x2  2     5     6     7     8     4     0     8     3     1   2   13  --ffFDEMW
"
`;
